@@ -40,9 +40,11 @@ The index "&dtml-getId;" contains <dtml-var items fmt=collection-length thousand
                 <li><a href="<dtml-var "getpath(v)">"<dtml-var "getpath(v)"></a></li>
               <dtml-else>
                 <dtml-in "v">
-
+                 <dtml-try>
                   <li> <a href="<dtml-var "getpath(int(_['sequence-item']))">"><dtml-var "getpath(int(_['sequence-item']))"></a> docid=<dtml-var "int(_['sequence-item'])"></li>
-
+                  <dtml-except KeyError>
+                  <li>ERROR getpath failed for docid=<dtml-var "int(_['sequence-item'])"></li>
+                 </dtml-try>
                 </dtml-in>
               </dtml-if>
             </dtml-let>
